--- a/index.html
+++ b/index.html
@@ -22,42 +22,39 @@
     <center>
         <button class="all">show all</button>
         <button class="five">show five</button>
-        <button class="menu">menu</button>
+        <button id="menu">menu</button>
     </center>
 
-    <center>
-        <div class="modal">
-            <div class="modal__dialog">
-                <div class="modal__content">
-                    
-                        <div data-close class="modal__close">&times;</div>
-                        <table>
-                            <tr>
-                                <th>Item</th>
-                                <th>Quantity</th>
-                                <th>Price</th>
-                                <th>Action</th>
-                            </tr>
-                            <tr>
-                                <td>Cozy Blanket</td>
-                                <td>
-                                    <div class="header">
-                                        <button class="decrease">-</button>
-                                        <input type="text" id="quantity" value="1">
-                                        <button class="increase">+</button>
-                                    </div>
-                                </td>
-                                <td>$29.99</td>
-                                <td>
-                                    <button class="remove" onclick="removeItem()">Remove</button>
-                                </td>
-                            </tr>
-                        </table>
-                    
-                </div>
+    <aside>
+        <div class="info">
+            <span>Cart</span>
+            <button id="close" class="close">close</button>
+        </div>
+        <div class="list">
+            <div class="scrollable-list">
+                <!-- <div class="item">
+                    <h1 class="head">Cozy socks</h1>
+                    <div class="menu_item">
+                       <div class="menu_left">
+                        <div class="img"></div>
+                        <div class="btns">
+                            <button class="decrease">-</button>
+                            <input class="btns_inp" type="text" value="1">
+                            <button class="increase">+</button>
+                        </div>
+                       </div>
+
+                       <div class="menu_right">
+                        <span>$29.99</span>
+                        <button class = "remove_btn">Remove</button>
+                       </div>
+
+                    </div>
+                </div> -->
             </div>
         </div>
-    </center>
+        <div class="show_total"></div>
+    </aside>
 
     <div class="container">
 
@@ -65,6 +62,7 @@
 
 
 
+    <script src="./cart.js"></script>
     <script src="./components/db.js"></script>
     <script src="./components/Item.js"></script>
     <script src="./index.js"></script>
